--- a/resume/resume.html
+++ b/resume/resume.html
@@ -4,189 +4,215 @@
     <title>Resume</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div data-reactid="14" class="container">
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">R. Alex Anderson</a>
+            </div>
 
-        <header>
-            <h1 data-reactid="16">R. Alex Anderson</h1>
-        </header>
-        <div class="col-sm-9">
-            <h2><a id="Education_0"></a>Education</h2>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li><a href="../index.html">Home <span class="sr-only">(current)</span></a></li>
+                    <li><a href="../interests.html">About</a></li>
+                    <li class="active"><a href="resume.html">Resume</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="http://ralexanderson.com">My Website</a></li>
+                </ul>
+            </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+    </nav>
+    <header>
+        <h1 data-reactid="16">R. Alex Anderson</h1>
+    </header>
+    <div class="col-sm-9">
+        <h2><a id="Education_0"></a>Education</h2>
+
+
+        <h4><a id="Brigham_Young_Universitybyu_emsp_smallApr_2018__Provo_UTsmall_1"></a><a href="http://byu.edu">Brigham
+            Young University</a> <small><em>Apr 2018 : Provo,
+            UT</em></small></h4>
+
+
+            <p>Bachelor of Science, Information Systems</p>
+
+
+            <p>Minor in Graphic Design</p>
+
+
+            <ul>
+                <li>GPA 3.41, ACT 33</li>
+
+
+                <li>Member of the Association of Information Systems</li>
+            </ul>
+
+
+            <h2><a id="Experience_9"></a>Experience</h2>
 
 
             <h4><a id=
-                "Brigham_Young_Universitybyu_emsp_smallApr_2018__Provo_UTsmall_1"></a><a href="http://byu.edu">Brigham
-                Young University</a> <small><em>Apr 2018 : Provo,
-                UT</em></small></h4>
+                "BlenderBottle_Companyblenderbottle_emsp_smallFeb_2014__Current__Lehi_UTsmall_10">
+            </a><a href="http://blenderbottle.com">BlenderBottle Company</a> 
+            <small><em>Feb 2014 - Current : Lehi, UT</em></small></h4>
 
 
-                <p>Bachelor of Science, Information Systems</p>
+            <p>IT Specialist</p>
 
 
-                <p>Minor in Graphic Design</p>
+            <ul>
+                <li>Performed IT Helpdesk &amp; Support functions to ensure employees
+                    could us IT resources productively</li>
 
 
-                <ul>
-                    <li>GPA 3.41, ACT 33</li>
+                    <li>Developed Design Your Own BlenderBottle contest, mobile recipe book
+                        app, and marketing websites to improve customer engagement and bringing
+                        in over 76,000 website page views</li>
 
 
-                    <li>Member of the Association of Information Systems</li>
-                </ul>
+                        <li>Worked with internal departments to program Shipping Container
+                            Management software, company wellness challenge app, mobile recipe book
+                            app, company HRIS, etc. to improve internal processes and
+                            increasing</li>
+                        </ul>
+
+                        <hr>
 
 
-                <h2><a id="Experience_9"></a>Experience</h2>
+                        <h4><a id=
+                            "Space_EdVentures_Foundationspaceed_emsp_smallApr_2014__Current__Lehi_UTsmall_21">
+                        </a><a href="http://farpointstation.weebly.com">Space EdVentures
+                        Foundation</a> <small><em>Apr 2014 - Current : Lehi,
+                        UT</em></small></h4>
 
 
-                <h4><a id=
-                    "BlenderBottle_Companyblenderbottle_emsp_smallFeb_2014__Current__Lehi_UTsmall_10">
-                </a><a href="http://blenderbottle.com">BlenderBottle Company</a> 
-                <small><em>Feb 2014 - Current : Lehi, UT</em></small></h4>
+                        <p>Consultant</p>
 
 
-                <p>IT Specialist</p>
+                        <ul>
+                            <li>Programmed computer controlled lighting, sound, and effects system
+                                for Voyager simulator</li>
 
 
-                <ul>
-                    <li>Performed IT Helpdesk &amp; Support functions to ensure employees
-                        could us IT resources productively</li>
+                                <li>Organized development, prizes, marketing and website platform for
+                                    crowdfunding campaign</li>
 
 
-                        <li>Developed Design Your Own BlenderBottle contest, mobile recipe book
-                            app, and marketing websites to improve customer engagement and bringing
-                            in over 76,000 website page views</li>
+                                    <li>Developed a scheduling website for the Space EdVentures foundation
+                                        to use to book missions and charge customers</li>
+                                    </ul>
+
+                                    <hr>
 
 
-                            <li>Worked with internal departments to program Shipping Container
-                                Management software, company wellness challenge app, mobile recipe book
-                                app, company HRIS, etc. to improve internal processes and
-                                increasing</li>
-                            </ul>
-
-                            <hr>
+                                    <h4><a id=
+                                        "The_Church_of_Jesus_Christ_of_Latterday_Saintslds_emsp_smallJan_2012__Jan_2014__Pittsburgh_PAsmall_30">
+                                    </a><a href="http://lds.org">The Church of Jesus Christ of Latter-day
+                                    Saints</a> <small><em>Jan 2012 - Jan 2014 : Pittsburgh,
+                                    PA</em></small></h4>
 
 
-                            <h4><a id=
-                                "Space_EdVentures_Foundationspaceed_emsp_smallApr_2014__Current__Lehi_UTsmall_21">
-                            </a><a href="http://farpointstation.weebly.com">Space EdVentures
-                            Foundation</a> <small><em>Apr 2014 - Current : Lehi,
-                            UT</em></small></h4>
+                                    <p>Volunteer Representative</p>
 
 
-                            <p>Consultant</p>
+                                    <ul>
+                                        <li>Led and trained other representatives to set and achieve
+                                            challenging goals</li>
 
 
-                            <ul>
-                                <li>Programmed computer controlled lighting, sound, and effects system
-                                    for Voyager simulator</li>
-
-
-                                    <li>Organized development, prizes, marketing and website platform for
-                                        crowdfunding campaign</li>
-
-
-                                        <li>Developed a scheduling website for the Space EdVentures foundation
-                                            to use to book missions and charge customers</li>
+                                            <li>Taught individuals personally adapted lessons in their homes</li>
                                         </ul>
 
                                         <hr>
 
 
                                         <h4><a id=
-                                            "The_Church_of_Jesus_Christ_of_Latterday_Saintslds_emsp_smallJan_2012__Jan_2014__Pittsburgh_PAsmall_30">
-                                        </a><a href="http://lds.org">The Church of Jesus Christ of Latter-day
-                                        Saints</a> <small><em>Jan 2012 - Jan 2014 : Pittsburgh,
-                                        PA</em></small></h4>
+                                            "Christa_McAuliffe_Space_Education_Centercmsec_emsp_smallJun_2006__Aug_2011__Pleasant_Grove_UTsmall_37">
+                                        </a><a href="http://spacecenter.alpineschools.com">Christa McAuliffe Space
+                                        Education Center</a> <small><em>Jun 2006 - Aug 2011 : Pleasant
+                                        Grove, UT</em></small></h4>
 
 
-                                        <p>Volunteer Representative</p>
+                                        <p>Flight Director, Programmer</p>
 
 
                                         <ul>
-                                            <li>Led and trained other representatives to set and achieve
-                                                challenging goals</li>
+                                            <li>Assisted in 5th &amp; 6th grade space camp field trip simulation
+                                                experience</li>
 
 
-                                                <li>Taught individuals personally adapted lessons in their homes</li>
-                                            </ul>
-
-                                            <hr>
+                                                <li>Managed and trained four flight directors to improve quality of
+                                                    simulator experience</li>
 
 
-                                            <h4><a id=
-                                                "Christa_McAuliffe_Space_Education_Centercmsec_emsp_smallJun_2006__Aug_2011__Pleasant_Grove_UTsmall_37">
-                                            </a><a href="http://spacecenter.alpineschools.com">Christa McAuliffe Space
-                                            Education Center</a> <small><em>Jun 2006 - Aug 2011 : Pleasant
-                                            Grove, UT</em></small></h4>
+                                                    <li>Programmed starship simulator controls for four separate simulators
+                                                        using LiveCode</li>
+                                                    </ul>
+
+                                                    <hr>
 
 
-                                            <p>Flight Director, Programmer</p>
+                                                    <h2><a id="Skills_and_Certifications_45"></a>Skills and Certifications</h2>
 
 
-                                            <ul>
-                                                <li>Assisted in 5th &amp; 6th grade space camp field trip simulation
-                                                    experience</li>
+                                                    <h5><a id="Proficiencies_46"></a>Proficiencies</h5>
 
 
-                                                    <li>Managed and trained four flight directors to improve quality of
-                                                        simulator experience</li>
+                                                    <p><code>Javascript</code>, <code>HTML</code>, <code>CSS</code>,
+                                                        <code>PHP</code>, <code>Angular.js</code>, <code>NodeJS</code>,
+                                                        <code>Meteor</code></p>
 
 
-                                                        <li>Programmed starship simulator controls for four separate simulators
-                                                            using LiveCode</li>
-                                                        </ul>
-
-                                                        <hr>
+                                                        <h4><a id="Experience_48"></a>Experience</h4>
 
 
-                                                        <h2><a id="Skills_and_Certifications_45"></a>Skills and Certifications</h2>
+                                                        <p><code>React</code>, <code>React-Native</code>, <code>Elixir</code>,
+                                                            <code>GraphQL</code>, <code>SQL Server</code>, <code>MongoDB</code>,
+                                                            <code>Git</code>, <code>Linux</code></p>
 
 
-                                                        <h5><a id="Proficiencies_46"></a>Proficiencies</h5>
+                                                            <h2><a id="Awards_50"></a>Awards</h2>
 
 
-                                                        <p><code>Javascript</code>, <code>HTML</code>, <code>CSS</code>,
-                                                            <code>PHP</code>, <code>Angular.js</code>, <code>NodeJS</code>,
-                                                            <code>Meteor</code></p>
+                                                            <ul>
+                                                                <li>Hopeful winner of the Wall’s Battle of the Bands Fall 2016</li>
+                                                            </ul>
 
 
-                                                            <h4><a id="Experience_48"></a>Experience</h4>
+                                                            <h2><a id="References_52"></a>References</h2>
 
 
-                                                            <p><code>React</code>, <code>React-Native</code>, <code>Elixir</code>,
-                                                                <code>GraphQL</code>, <code>SQL Server</code>, <code>MongoDB</code>,
-                                                                <code>Git</code>, <code>Linux</code></p>
-
-
-                                                                <h2><a id="Awards_50"></a>Awards</h2>
-
-
-                                                                <ul>
-                                                                    <li>Hopeful winner of the Wall’s Battle of the Bands Fall 2016</li>
-                                                                </ul>
-
-
-                                                                <h2><a id="References_52"></a>References</h2>
-
-
-                                                                <p><em>Available upon request</em>
-                                                                </p>
-                                                            </div>
-                                                            <aside class="col-sm-3">
-                                                                <nav>
-                                                                    <ul>
-                                                                        <li><a href="../index.html">Home</a></li>
-                                                                        <li><a href="../interests.html">Interests</a></li>
-                                                                        <li><a href="resume.html">Resume</a></li>
-                                                                        <li><a href="http://ralexanderson.com">My Website</a></li>
-                                                                    </ul>
-                                                                </nav>
-                                                            </aside>
-                                                            <footer>
-                                                                Copyright R. Alex Anderson 2016
-                                                            </footer>
+                                                            <p><em>Available upon request</em>
+                                                            </p>
                                                         </div>
-                                                        
-                                                    </body>
-                                                    </html>
+                                                        <aside class="col-sm-3">
+                                                            <nav>
+                                                                <ul>
+                                                                    <li><a href="../index.html">Home</a></li>
+                                                                    <li><a href="../interests.html">Interests</a></li>
+                                                                    <li><a href="resume.html">Resume</a></li>
+                                                                    <li><a href="http://ralexanderson.com">My Website</a></li>
+                                                                </ul>
+                                                            </nav>
+                                                        </aside>
+                                                        <footer>
+                                                            Copyright R. Alex Anderson 2016
+                                                        </footer>
+                                                    </div>
+
+                                                </body>
+                                                </html>
